<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.regis.MyData.LoginDemo">
    <TextView
        android:id="@+id/TitleText"
        android:text="@string/title_text"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="#000"
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/UserName"
        android:layout_marginTop="50dp"
        android:textColorHint="#000"
        android:gravity="center_horizontal"
        android:hint="@string/hint_username"
        android:layout_below="@+id/TitleText"
        android:layout_centerHorizontal="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/Password"
        android:layout_marginTop="45dp"
        android:textColorHint="#000"
        android:gravity="center_horizontal"
        android:layout_below="@+id/UserName"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/LoginButton"
        android:text="@string/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_marginLeft="38dp"
        android:layout_below="@+id/Password"
        android:layout_alignLeft="@+id/Password"
        android:layout_alignStart="@+id/Password"
        android:layout_marginStart="38dp"
        android:layout_marginTop="60dp" />
    <Button
        android:id="@+id/RegisterButton"
        android:text="@string/RegisterButton"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp"
        android:layout_alignBaseline="@+id/LoginButton"
        android:layout_alignBottom="@+id/LoginButton"
        android:layout_alignRight="@+id/Password"
        android:layout_alignEnd="@+id/Password" />




</RelativeLayout>
